--- a/public/scss/components.scss
+++ b/public/scss/components.scss
@@ -12,6 +12,9 @@
   color: #fff;
   text-decoration: none;
 }
+.btn.warn{
+  background: rgb(242, 1, 10);
+}
 .circle-btn{
   display: inline-block;
   text-align: center;
