--- a/public/css/base.css
+++ b/public/css/base.css
@@ -20,6 +20,9 @@ body {
   color: #fff;
   text-decoration: none; }
 
+.btn.warn {
+  background: #f2010a; }
+
 .circle-btn {
   display: inline-block;
   text-align: center;
