--- a/public/css/components.css
+++ b/public/css/components.css
@@ -11,6 +11,9 @@
   color: #fff;
   text-decoration: none; }
 
+.btn.warn {
+  background: #f2010a; }
+
 .circle-btn {
   display: inline-block;
   text-align: center;
