--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -330,6 +330,9 @@ $width:270px;
             text-align: center;
         }
     }
+    .btn{
+        margin: 30px auto;
+    }
     .members{
         label{
             display: inline-block;
