--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -6,15 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
   <link rel="stylesheet" type="text/css" href="./css/base.css">
   <link rel="stylesheet" type="text/css" href="./css/tuan.css">
+  <link rel="stylesheet" type="text/css" href="./lib/bootstrap.min.css">
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
   <script charset="utf-8" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/angular-touch.js"></script>
   <script src="./lib/angular-route.min.js"></script>
+  <script src="./lib/ui-bootstrap-custom-tpls-0.12.1.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
   <script src="./js/filter.js"></script>
   <script src="./js/service.js"></script>
+  <script src="./js/modalService.js"></script>
 </head>
 <body>
 
