fix css confilct

--- a/public/scss/components.scss
+++ b/public/scss/components.scss
@@ -2,6 +2,7 @@
 /** components */
 .btn{
   display: block;
+  padding:0;
   width: 100px;
   text-align: center;
   height: 40px;
@@ -71,3 +72,4 @@
         }
     }
 }
+
