--- a/public/css/base.css
+++ b/public/css/base.css
@@ -10,6 +10,7 @@ body {
 /** components */
 .btn {
   display: block;
+  padding: 0;
   width: 100px;
   text-align: center;
   height: 40px;
@@ -199,8 +200,8 @@ body {
   box-sizing: border-box;
   margin: 10px 0; }
 .s-bill input[type="number"] {
-  height: 30px;
-  line-height: 30px;
+  height: 40px;
+  line-height: 20px;
   width: 80%;
   padding: 5px;
   font-size: 20px;
@@ -325,6 +326,8 @@ body {
     vertical-align: top;
     line-height: 30px;
     text-align: center; }
+.s-history-detail .btn {
+  margin: 30px auto; }
 .s-history-detail .members label {
   display: inline-block;
   width: 50px;
