--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -11,6 +11,8 @@
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/angular-touch.js"></script>
   <script src="./lib/angular-route.min.js"></script>
+  <script src="./lib/hammer.js"></script>
+  <script src="./lib/angular-gestures.js"></script>
   <script src="./lib/ui-bootstrap-custom-tpls-0.12.1.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
