--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -13,7 +13,7 @@
   <script src="./lib/angular-route.min.js"></script>
   <script src="./lib/hammer.js"></script>
   <script src="./lib/angular-gestures.js"></script>
-  <script src="./lib/ui-bootstrap-custom-tpls-0.12.1.js"></script>
+  <script src="./lib/ui-bootstrap-custom-tpls.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
   <script src="./js/filter.js"></script>
