--- a/public/css/base.css
+++ b/public/css/base.css
@@ -80,39 +80,54 @@ body {
   text-align: justify; }
   .s-members .members {
     padding: 30px; }
-    .s-members .members .member {
+    .s-members .members .member-wrap {
       display: inline-block;
       margin: 0 10px;
       width: 80px;
-      height: 80px;
-      background-size: 100%;
-      border-radius: 40px;
-      position: relative;
-      overflow: hidden;
-      border: 1px solid #d8d8d8; }
-      .s-members .members .member img {
-        max-width: 100%; }
-      .s-members .members .member p {
-        position: absolute;
-        bottom: 5px;
-        left: 10px;
-        width: 100%;
-        text-align: center;
-        height: 20px;
-        line-height: 20px;
-        -webkit-transform: rotate(-22deg);
-        transform: rotate(-22deg);
-        font-size: 14px; }
-    .s-members .members .circle-btn {
-      border: 1px solid #e0dee1;
-      position: fixed;
-      bottom: 50px;
-      right: 4px;
-      color: #888;
-      background: #fff;
-      height: 60px;
-      width: 60px;
-      line-height: 60px; }
+      height: 80px; }
+      .s-members .members .member-wrap .member {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        background-size: 100%;
+        border-radius: 40px;
+        position: relative;
+        overflow: hidden;
+        border: 1px solid #d8d8d8; }
+        .s-members .members .member-wrap .member img {
+          max-width: 100%; }
+        .s-members .members .member-wrap .member p {
+          color: #000;
+          position: absolute;
+          bottom: 5px;
+          left: 10px;
+          width: 100%;
+          text-align: center;
+          height: 20px;
+          line-height: 20px;
+          -webkit-transform: rotate(-22deg);
+          transform: rotate(-22deg);
+          font-size: 14px; }
+      .s-members .members .member-wrap ul {
+        width: 130px;
+        min-width: 50px;
+        padding: 5px 10px; }
+        .s-members .members .member-wrap ul li {
+          font-size: 16px;
+          line-height: 2; }
+          .s-members .members .member-wrap ul li .first {
+            font-size: 20px; }
+          .s-members .members .member-wrap ul li .date {
+            display: inline-block;
+            width: 46px; }
+          .s-members .members .member-wrap ul li .negative {
+            color: red; }
+            .s-members .members .member-wrap ul li .negative.first {
+              color: #000; }
+          .s-members .members .member-wrap ul li.sum {
+            border-top: 1px solid #d8d8d8;
+            padding: 0 10px 0 0;
+            text-align: right; }
 
 .s-index {
   text-align: center; }
@@ -157,15 +172,29 @@ body {
 
 .s-history .history li {
   font-size: 14px;
-  padding: 10px 0 10px 100px;
+  padding: 10px;
   border-bottom: 1px solid #dddddd;
   position: relative;
   line-height: 1.5; }
+  .s-history .history li img {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 10px 0 0; }
   .s-history .history li .time {
-    margin-right: 10px;
+    display: inline-block;
     position: absolute;
-    left: 20px;
-    top: 11px; }
+    right: 10px;
+    height: 30px;
+    line-height: 30px; }
+  .s-history .history li .detail {
+    display: inline-block;
+    width: 80%;
+    padding: 0 50px 0 0;
+    height: 30px;
+    line-height: 30px; }
   .s-history .history li .delete {
     position: absolute;
     right: 0;
