--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -17,44 +17,67 @@ body{
     text-align: justify;
     .members{
         padding: 30px;
-        .member{
+        .member-wrap{
             display: inline-block;
             margin: 0 10px;
             width: 80px;
             height: 80px;
-            background-size: 100%;
-            border-radius: 40px;
-            position: relative;
-            overflow: hidden;
-            border: 1px solid $hTextC;
-            img{
-              max-width: 100%;
-            }
+            .member{
+                display: inline-block;
+                width: 80px;
+                height: 80px;
+                background-size: 100%;
+                border-radius: 40px;
+                position: relative;
+                overflow: hidden;
+                border: 1px solid $hTextC;
+                img{
+                    max-width: 100%;
+                }
 
-            p{
-                position: absolute;
-                bottom: 5px;
-                left: 10px;
-                width: 100%;
-                text-align: center;
-                height: 20px;
-                line-height: 20px;
-                -webkit-transform: rotate(-22deg);
-                transform: rotate(-22deg);
-                font-size: 14px;
+                p{
+                    color:#000;
+                    position: absolute;
+                    bottom: 5px;
+                    left: 10px;
+                    width: 100%;
+                    text-align: center;
+                    height: 20px;
+                    line-height: 20px;
+                    -webkit-transform: rotate(-22deg);
+                    transform: rotate(-22deg);
+                    font-size: 14px;
+                }
+            }
+            ul{
+                width: 130px;
+                min-width: 50px;
+                padding: 5px 10px;
+                li{
+                    font-size: 16px;
+                    line-height: 2;
+                    .first {
+                        font-size: 20px;
+                    }
+                    .date{
+                        display: inline-block;
+                        width: 46px;
+                    }
+                    .negative{
+                        color: red;
+                        &.first{
+                            color: #000;
+                        }
+                    }
+                    &.sum{
+                        border-top: 1px solid $hTextC;
+                        padding: 0 10px 0 0;
+                        text-align: right;
+                    }
+                }
             }
         }
-        .circle-btn{
-            border: 1px solid $bgc1;
-          position: fixed;
-            bottom: 50px;
-            right: 4px;
-            color: #888;
-            background: $bgc;
-            height: 60px;
-            width: 60px;
-            line-height: 60px;
-        }
+
     }
 }
 
@@ -115,15 +138,31 @@ $width:270px;
     .history{
         li{
             font-size: 14px;
-            padding: 10px 0 10px 100px;
+            padding: 10px;
             border-bottom:1px solid $textAreaBg;
             position: relative;
             line-height: 1.5;
+            img{
+                width: 30px;
+                height: 30px;
+                border-radius: 15px;
+                display: inline-block;
+                vertical-align: top;
+                margin: 0 10px 0 0;
+            }
             .time{
-                margin-right: 10px;
+                display: inline-block;
                 position: absolute;
-                left:20px;
-                top:11px;
+                right: 10px;
+                height: 30px;
+                line-height: 30px;
+            }
+            .detail{
+                display: inline-block;
+                width: 80%;
+                padding: 0 50px 0 0;
+                height: 30px;
+                line-height: 30px;
             }
             .delete{
                 position: absolute;
