--- a/public/scss/components.scss
+++ b/public/scss/components.scss
@@ -7,7 +7,7 @@
   text-align: center;
   height: 40px;
   line-height: 40px;
-  margin: 0 auto;
+  margin: 50px auto;
   background-color: $btnBgc;
   border-radius: 4px;
   color: #fff;
