--- a/public/css/base.css
+++ b/public/css/base.css
@@ -15,7 +15,7 @@ body {
   text-align: center;
   height: 40px;
   line-height: 40px;
-  margin: 0 auto;
+  margin: 50px auto;
   background-color: #999999;
   border-radius: 4px;
   color: #fff;
