--- a/public/css/components.css
+++ b/public/css/components.css
@@ -6,7 +6,7 @@
   text-align: center;
   height: 40px;
   line-height: 40px;
-  margin: 0 auto;
+  margin: 50px auto;
   background-color: #999999;
   border-radius: 4px;
   color: #fff;
