--- a/public/css/components.css
+++ b/public/css/components.css
@@ -15,6 +15,23 @@
 .btn-s.warn {
   background: #f2010a; }
 
+.btn-primary {
+  background-color: red;
+  border-color: red; }
+
+.btn-warning {
+  background-color: #e0dee1;
+  border-color: #e0dee1; }
+
+.modal-body input {
+  width: 60%;
+  height: 40px;
+  line-height: 40px;
+  margin: 30px auto 0;
+  display: block;
+  font-size: 20px;
+  padding: 0 10px; }
+
 .circle-btn {
   display: inline-block;
   text-align: center;
