--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./lib/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./css/base.css">
   <link rel="stylesheet" type="text/css" href="./css/tuan.css">
+  <link rel="stylesheet" type="text/css" href="./css/font.css">
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/angular-touch.js"></script>
