--- a/public/css/base.css
+++ b/public/css/base.css
@@ -64,29 +64,46 @@ body {
   left: 10px; }
 
 .nav ul {
-  background: #fff;
+  background: #f6f6f6;
   width: 100%;
-  height: 40px;
-  line-height: 40px;
+  height: 60px;
+  line-height: 60px;
   position: fixed;
   bottom: 0;
   text-align: center;
   border-top: 1px solid #e0dee1;
-  z-index: 2; }
+  z-index: 2;
+  font-size: 30px; }
   .nav ul li {
     text-align: center;
     display: inline-block;
-    width: 25%;
-    font-size: 16px;
+    width: 20%;
     float: left; }
     .nav ul li a {
       text-decoration: none;
-      color: #888;
-      width: 100%; }
+      width: 100%;
+      color: #7d7d7d; }
     .nav ul li.cur a {
-      color: #609700; }
-    .nav ul li.me a {
-      font-size: 20px; }
+      color: #ff9b25; }
+
+.index-btn {
+  position: fixed;
+  bottom: 20px;
+  z-index: 10;
+  left: 50%;
+  margin-left: -40px;
+  height: 75px;
+  width: 75px;
+  box-shadow: 0 0 0 5px #f6f6f6;
+  line-height: 1;
+  background-color: #ff9b25;
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0 0 0 5px #f6f6f6; }
+  .index-btn .icon {
+    margin-top: 5px;
+    font-size: 40px;
+    display: block; }
 
 body {
   padding: 0 0 40px 0; }
@@ -97,6 +114,14 @@ body {
 
 .s-members {
   text-align: justify; }
+  .s-members h1 {
+    width: 100%;
+    background-color: #f6f6f6;
+    text-align: center;
+    height: 44px;
+    line-height: 44px;
+    color: #636363;
+    font-size: 20px; }
   .s-members .members {
     padding: 30px; }
     .s-members .members .member-wrap {
@@ -112,25 +137,24 @@ body {
         border-radius: 40px;
         position: relative;
         overflow: hidden;
-        border: 1px solid #d8d8d8; }
+        box-shadow: 0 0 0 5px #ededed; }
         .s-members .members .member-wrap .member img {
           max-width: 100%; }
-        .s-members .members .member-wrap .member p {
-          color: #000;
-          position: absolute;
-          bottom: 5px;
-          left: 10px;
-          width: 100%;
-          text-align: center;
-          height: 20px;
-          line-height: 20px;
-          -webkit-transform: rotate(-22deg);
-          transform: rotate(-22deg);
-          font-size: 14px; }
+      .s-members .members .member-wrap p {
+        color: #5bccbe;
+        text-align: center;
+        font-size: 14px;
+        margin: 2px 0; }
+        .s-members .members .member-wrap p.owe {
+          color: #ea6e6f; }
       .s-members .members .member-wrap ul {
         width: 130px;
         min-width: 50px;
-        padding: 5px 12px; }
+        padding: 5px 12px;
+        background: rgba(101, 101, 101, 0.85);
+        color: #fff;
+        border: 1px solid #e9e9e9;
+        border-radius: 4px; }
         .s-members .members .member-wrap ul li {
           font-size: 16px;
           line-height: 2; }
@@ -143,15 +167,23 @@ body {
           .s-members .members .member-wrap ul li .date {
             display: inline-block;
             width: 40px; }
-          .s-members .members .member-wrap ul li .negative {
-            color: red; }
-            .s-members .members .member-wrap ul li .negative.first {
-              color: #000; }
           .s-members .members .member-wrap ul li.sum {
-            border-top: 1px solid #d8d8d8;
-            padding-left: 45px; }
+            border-top: 1px dashed #d8d8d8;
+            padding-left: 45px;
+            color: #ea6e6f; }
           .s-members .members .member-wrap ul li.nickname {
-            font-size: 12px; }
+            font-size: 12px;
+            width: 100%;
+            background: #303030;
+            text-align: center;
+            padding: 5px 0;
+            border-radius: 5px 5px 0 0; }
+          .s-members .members .member-wrap ul li.spec {
+            font-size: 12px;
+            width: 100%;
+            background: #ff9b25;
+            text-align: center;
+            padding: 5px 0; }
 
 .s-index {
   text-align: center; }
@@ -319,8 +351,10 @@ body {
   line-height: 80px;
   margin: 10px;
   border-radius: 50%;
-  background: #e0dee1;
+  background: #a481c8;
+  box-shadow: 0 0 0 5px rgba(164, 129, 200, 0.3);
   text-align: center;
+  color: #fff;
   text-overflow: ellipsis;
   white-space: nowrap;
   position: relative; }
@@ -339,28 +373,58 @@ body {
     border-radius: 10px;
     display: inline-block;
     line-height: 20px; }
+.s-list .list {
+  text-align: center;
+  padding: 10px; }
 .s-list .index-nav {
   position: fixed;
   bottom: 0;
-  height: 40px;
-  line-height: 40px;
-  border-top: 1px solid #e0dee1;
+  height: 60px;
+  font-size: 20px;
+  border-top: 1px solid #e2e1e1;
+  background: #f6f6f6;
   width: 100%;
   white-space: nowrap; }
-  .s-list .index-nav .menu {
-    display: inline-block;
-    width: 40px; }
   .s-list .index-nav .self {
     display: inline-block;
     width: 200px;
     text-align: center; }
+    .s-list .index-nav .self .avatar {
+      display: inline-block; }
+      .s-list .index-nav .self .avatar img {
+        margin-top: -70px;
+        height: 85px;
+        width: 85px;
+        border-radius: 50px;
+        padding: 5px;
+        border: 1px solid #e2e1e1;
+        background: #f6f6f6; }
+    .s-list .index-nav .self .user-info {
+      display: inline-block;
+      padding: 10px 0 0 0; }
+      .s-list .index-nav .self .user-info .user {
+        font-size: 16px;
+        color: #3c3c3c;
+        display: block; }
+      .s-list .index-nav .self .user-info .total {
+        font-size: 12px;
+        color: #8a8a8a; }
   .s-list .index-nav .create {
     position: absolute;
     right: 0;
     top: 0;
-    width: 60px;
+    width: 90px;
     border-left: 1px solid #d8d8d8;
-    text-align: center; }
+    text-align: center;
+    height: 60px;
+    background: #ff9b25;
+    font-size: 23px;
+    line-height: 60px;
+    color: #fff; }
+    .s-list .index-nav .create .icon {
+      font-size: 24px;
+      margin: 0 5px;
+      vertical-align: -4px; }
 
 .s-history-detail .history-view {
   padding: 0 20px; }
