--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -15,6 +15,15 @@ body{
 
 .s-members{
     text-align: justify;
+    h1{
+        width: 100%;
+        background-color: #f6f6f6;
+        text-align: center;
+        height: 44px;
+        line-height: 44px;
+        color:#636363;
+        font-size: 20px;
+    }
     .members{
         padding: 30px;
         .member-wrap{
@@ -30,29 +39,28 @@ body{
                 border-radius: 40px;
                 position: relative;
                 overflow: hidden;
-                border: 1px solid $hTextC;
+                box-shadow:0 0 0 5px #ededed;
                 img{
                     max-width: 100%;
                 }
-
-                p{
-                    color:#000;
-                    position: absolute;
-                    bottom: 5px;
-                    left: 10px;
-                    width: 100%;
-                    text-align: center;
-                    height: 20px;
-                    line-height: 20px;
-                    -webkit-transform: rotate(-22deg);
-                    transform: rotate(-22deg);
-                    font-size: 14px;
+            }
+            p{
+                color:#5bccbe;
+                text-align:center;
+                font-size: 14px;
+                margin: 2px 0;
+                &.owe {
+                    color: #ea6e6f;
                 }
             }
             ul{
                 width: 130px;
                 min-width: 50px;
                 padding: 5px 12px;
+                background: rgba(101, 101, 101, .85);
+                color:#fff;
+                border: 1px solid #e9e9e9;
+                border-radius: 4px;
                 li{
                     font-size: 16px;
                     line-height: 2;
@@ -68,22 +76,33 @@ body{
                         width: 40px;
                     }
                     .negative{
-                        color: red;
+//                        color: red;
                         &.first{
-                            color: #000;
                         }
                     }
                     &.sum{
-                        border-top: 1px solid $hTextC;
+                        border-top: 1px dashed $hTextC;
                         padding-left: 45px;
+                        color: #ea6e6f;
                     }
                     &.nickname{
+                        font-size: 12px;
+                        width: 100%;
+                        background: #303030;
+                        text-align: center;
+                        padding: 5px 0;
+                        border-radius: 5px 5px 0 0;
+                    }
+                    &.spec{
                       font-size: 12px;
+                        width: 100%;
+                        background: #ff9b25;
+                        text-align: center;
+                        padding: 5px 0;
                     }
                 }
             }
         }
-
     }
 }
 
@@ -298,8 +317,10 @@ $width:270px;
         line-height: 80px;
         margin: 10px;
         border-radius: 50%;
-        background: $bgc1;
+        background: rgb(164,129,200);
+        box-shadow:0 0 0 5px rgba(164, 129, 200, 0.3);
         text-align: center;
+        color: #fff;
         text-overflow: ellipsis;
         white-space: nowrap;
         position: relative;
@@ -321,35 +342,69 @@ $width:270px;
             line-height: 20px;
         }
     }
-
+    .list{
+        text-align: center;
+        padding: 10px ;
+    }
 
     .index-nav{
         position: fixed;
         bottom: 0;
-        height: 40px;
-        line-height: 40px;
-        border-top: 1px solid $bgc1;
+        height: 60px;
+        font-size: 20px;
+        border-top: 1px solid #e2e1e1;
+        background: #f6f6f6;
         width: 100%;
         white-space: nowrap;
-        .menu{
-            display: inline-block;
-            width: 40px;
-            // border-right:1px solid $hTextC;
-        }
+
         .self{
             display: inline-block;
             width:200px;
             // border-right:1px solid $hTextC;
             text-align: center;
+            .avatar{
+                display: inline-block;  
+                img{
+                    margin-top: -70px;
+                    height: 85px;
+                    width: 85px;
+                    border-radius: 50px;
+                    padding: 5px;
+                    border: 1px solid #e2e1e1;
+                    background: #f6f6f6;
+                }
+            }
+            .user-info{
+                display: inline-block;
+                padding:10px 0 0 0;
+                .user{
+                    font-size: 16px;
+                    color: #3c3c3c;
+                    display: block;
+                }
+                .total{
+                    font-size: 12px;
+                    color: #8a8a8a;
+                }
+            }
         }
         .create{
+            .icon{
+                font-size: 24px;
+                margin: 0 5px;
+                vertical-align: -4px;
+            }
             position: absolute;
             right: 0;
             top: 0;
-            width: 60px;
+            width: 90px;
             border-left: 1px solid $hTextC;
             text-align: center;
-
+            height: 60px;
+            background:#ff9b25;
+            font-size: 23px;
+            line-height: 60px;
+            color:#fff;
         }
     }
 }
