--- a/public/css/base.css
+++ b/public/css/base.css
@@ -79,6 +79,8 @@ body {
     display: inline-block;
     width: 20%;
     float: left; }
+    .nav ul li.placeholder {
+      color: #f6f6f6; }
     .nav ul li a {
       text-decoration: none;
       width: 100%;
@@ -104,6 +106,10 @@ body {
     margin-top: 5px;
     font-size: 40px;
     display: block; }
+
+.index-btn:active, .index-btn:focus, .index-btn:hover {
+  color: #fff;
+  text-decoration: none; }
 
 body {
   padding: 0 0 40px 0; }
@@ -273,75 +279,120 @@ body {
     .s-history .history li.deleted .detail {
       text-decoration: line-through; }
 
-.s-bill .bill {
-  padding: 0 20px; }
-.s-bill h1 {
-  text-align: center;
-  font-size: 30px;
-  margin: 30px 0; }
-.s-bill h2 {
-  line-height: 20px;
-  margin: 1em 0; }
-.s-bill .tips {
-  border: 1px solid #e0dee1;
-  border-radius: 10px;
-  display: inline-block;
-  height: 20px;
-  width: 20px;
-  line-height: 20px;
-  text-align: center;
-  color: #e0dee1; }
-.s-bill .tip-panel {
-  display: block;
-  width: 100%;
-  background: #e0dee1;
-  padding: 10px;
-  box-sizing: border-box;
-  margin: 10px 0; }
-.s-bill input[type="number"] {
-  height: 40px;
-  line-height: 20px;
-  width: 80%;
-  padding: 5px;
-  font-size: 20px;
-  -webkit-appearance: none;
-  border: 1px solid #888;
-  color: #000;
-  box-shadow: none; }
-.s-bill .members input {
-  height: 20px;
-  line-height: 20px;
-  border: 1px solid #e0dee1;
-  -webkit-appearance: none;
-  padding: 0 10px; }
-.s-bill .members label {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  background-size: 100%;
-  line-height: 50px;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  margin: 5px;
-  border: 1px solid #e0dee1; }
-  .s-bill .members label.choosen p {
-    background-color: #ACC088; }
-  .s-bill .members label input {
-    display: none; }
-  .s-bill .members label p {
-    position: absolute;
-    bottom: -1px;
-    left: 8px;
-    width: 100%;
+.s-bill {
+  color: #7d7d7d; }
+  .s-bill .hd {
     text-align: center;
-    height: 20px;
-    line-height: 20px;
-    -webkit-transform: rotate(-22deg);
-    transform: rotate(-22deg);
-    font-size: 12px;
-    background-color: #d8d8d8; }
+    background-color: #f6f6f6;
+    padding: 0 0 10px 0; }
+    .s-bill .hd img {
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      margin: 10px 0;
+      display: inline-block; }
+    .s-bill .hd .mode {
+      margin: 10px auto 0;
+      background: #d4d4d4;
+      color: #fff;
+      width: 160px;
+      padding: 2px 0; }
+      .s-bill .hd .mode span {
+        padding: 2px 10px;
+        font-size: 15px; }
+      .s-bill .hd .mode .choosen {
+        background: #ff9b25; }
+  .s-bill .bd {
+    padding: 10px 20px;
+    position: relative;
+    border-bottom: 1px dashed #aaa; }
+    .s-bill .bd .all {
+      position: absolute;
+      right: 15px;
+      top: 15px; }
+    .s-bill .bd .sp {
+      color: #ff9b25;
+      font-size: 20px; }
+    .s-bill .bd .members {
+      margin: 5px 0 0 0; }
+      .s-bill .bd .members input {
+        height: 20px;
+        line-height: 20px;
+        border: 1px solid #e0dee1;
+        -webkit-appearance: none;
+        padding: 0 10px; }
+      .s-bill .bd .members label {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        background-size: 100%;
+        line-height: 50px;
+        text-align: center;
+        position: relative;
+        margin: 5px;
+        box-shadow: 0 0 0 5px #ededed;
+        padding-top: 50px; }
+        .s-bill .bd .members label input {
+          display: none; }
+        .s-bill .bd .members label .icon {
+          position: absolute;
+          top: 20px;
+          right: -11px;
+          font-size: 25px;
+          color: #7d7d7d; }
+        .s-bill .bd .members label .icon-check-mark-2 {
+          color: #ff9b25; }
+        .s-bill .bd .members label p {
+          width: 100%;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+          color: #676767; }
+  .s-bill .ft {
+    padding: 10px 10px; }
+    .s-bill .ft h2 {
+      margin: 10px 0;
+      position: relative; }
+    .s-bill .ft .icon {
+      font-size: 20px;
+      vertical-align: -4px; }
+    .s-bill .ft .tip-panel {
+      display: block;
+      width: 100%;
+      background: #e0dee1;
+      padding: 10px;
+      box-sizing: border-box;
+      margin: 10px 0; }
+    .s-bill .ft input[type="number"] {
+      height: 40px;
+      line-height: 20px;
+      width: 120px;
+      padding: 5px;
+      font-size: 12px;
+      -webkit-appearance: none;
+      border: 1px solid #d6d6d6;
+      color: #000;
+      box-shadow: none;
+      border-radius: 4px; }
+    .s-bill .ft .tips {
+      border: 1px solid #e0dee1;
+      border-radius: 10px;
+      display: inline-block;
+      height: 20px;
+      width: 20px;
+      line-height: 20px;
+      text-align: center;
+      color: #e0dee1; }
+    .s-bill .ft .aver {
+      position: absolute;
+      right: 10px;
+      top: 10px; }
+    .s-bill .ft .average {
+      color: #ff9b25;
+      font-size: 20px; }
+    .s-bill .ft .index-btn .icon {
+      font-size: 40px; }
 
 .s-list .tuan {
   display: inline-block;
