--- a/public/css/components.css
+++ b/public/css/components.css
@@ -68,6 +68,8 @@
     display: inline-block;
     width: 20%;
     float: left; }
+    .nav ul li.placeholder {
+      color: #f6f6f6; }
     .nav ul li a {
       text-decoration: none;
       width: 100%;
@@ -93,5 +95,9 @@
     margin-top: 5px;
     font-size: 40px;
     display: block; }
+
+.index-btn:active, .index-btn:focus, .index-btn:hover {
+  color: #fff;
+  text-decoration: none; }
 
 /*# sourceMappingURL=components.css.map */
