--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -220,90 +220,148 @@ $width:270px;
     }
 }
 .s-bill{
-    .bill{
-        padding: 0 20px;
-    }
-    h1{
+    color:#7d7d7d;
+    .hd{
         text-align: center;
-        font-size: 30px;
-        margin: 30px 0;
-    }
-    h2{
-        line-height: 20px;
-        margin: 1em 0;
-    }
-    .tips{
-        border:1px solid $bgc1;
-        border-radius: 10px;
-        display: inline-block;
-        height: 20px;
-        width: 20px;
-        line-height: 20px;
-        text-align: center;
-        color: $bgc1;
-    }
-    .tip-panel{
-        display: block;
-        width:100%;
-        background: $bgc1;
-        padding: 10px;
-        box-sizing: border-box;
-        margin: 10px 0;
-    }
-    input[type="number"]{
-        height: 40px;
-        line-height: 20px;
-        width: 80%;
-        padding: 5px;
-        font-size: 20px;
-        -webkit-appearance: none;
-        border: 1px solid #888;
-        color: #000;
-        box-shadow: none;
-
-    }
-    .members{
-        input{
-            height: 20px;
-            line-height: 20px;
-            border:1px solid $bgc1;
-            -webkit-appearance: none;
-            padding: 0 10px;
-        }
-
-        label{
+        background-color: #f6f6f6;
+        padding:0 0 10px 0 ;
+        img {
+            width: 40px;
+            height: 40px;
+            border-radius: 20px;
+            margin: 10px 0;
             display: inline-block;
-            width:50px;
-            height: 50px;
-            border-radius: 25px;
-            background-size: 100%;
-            line-height: 50px;
-            text-align: center;
-            position: relative;
-            overflow:hidden;
-            margin: 5px;
-            border:1px solid $bgc1;
+        }
+        p{
+            
+        }
+        .mode{
+            margin: 10px auto 0;
+            background: #d4d4d4;
+            color: #fff;
+            width: 160px;
+            padding: 2px 0 ;
+            span{
+                padding: 2px 10px;
+                font-size: 15px;
+            }
+            .choosen{
+                background: #ff9b25;
+            }
+        }
+    }
 
-            &.choosen{
-                p{
-                    background-color: #ACC088;
-                }
-            }
+    .bd{
+        padding:10px 20px;
+        position: relative;
+        border-bottom: 1px dashed #aaa;
+        .all{
+            position: absolute;
+            right: 15px;
+            top:15px;
+        }
+        .sp{
+            color:#ff9b25;
+            font-size: 20px;
+        }
+        .members{
+            margin: 5px 0 0 0;
             input{
-                display: none;
-            }
-            p{
-                position: absolute;
-                bottom: -1px;
-                left: 8px;
-                width: 100%;
-                text-align: center;
                 height: 20px;
                 line-height: 20px;
-                -webkit-transform: rotate(-22deg);
-                transform: rotate(-22deg);
-                font-size: 12px;
-                background-color: $hTextC;
+                border:1px solid $bgc1;
+                -webkit-appearance: none;
+                padding: 0 10px;
+            }
+
+            label{
+                display: inline-block;
+                width:50px;
+                height: 50px;
+                border-radius: 25px;
+                background-size: 100%;
+                line-height: 50px;
+                text-align: center;
+                position: relative;
+                margin: 5px;
+                box-shadow: 0 0 0 5px #ededed;
+                padding-top: 50px;
+                input{
+                    display: none;
+                }
+                .icon{
+                    position: absolute;
+                    top: 20px;
+                    right: -11px;
+                    font-size: 25px;
+                    color: #7d7d7d;
+                }
+                .icon-check-mark-2{
+                    color: #ff9b25;
+                }
+                p{
+                    width:100%;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space:nowrap;
+                    color: #676767;
+                }
+            }
+        }
+    }
+    .ft{
+        padding: 10px 10px;
+        h2{
+            margin: 10px 0 ;
+            position: relative;
+        }
+        .icon{
+            font-size: 20px;
+            vertical-align: -4px;
+        }
+        .tip-panel{
+            display: block;
+            width:100%;
+            background: $bgc1;
+            padding: 10px;
+            box-sizing: border-box;
+            margin: 10px 0;
+        }
+        input[type="number"]{
+            height: 40px;
+            line-height: 20px;
+            width: 120px;
+            padding: 5px;
+            font-size: 12px;
+            -webkit-appearance: none;
+            border: 1px solid #d6d6d6;
+            color: #000;
+            box-shadow: none;
+            border-radius: 4px;
+
+        }
+        .tips{
+            border:1px solid $bgc1;
+            border-radius: 10px;
+            display: inline-block;
+            height: 20px;
+            width: 20px;
+            line-height: 20px;
+            text-align: center;
+            color: $bgc1;
+        }
+        .aver{
+            position: absolute;
+            right: 10px;
+            top: 10px;
+        }
+        .average{
+            color: #ff9b25;
+            font-size: 20px;
+        }
+        .index-btn{
+            .icon{
+                font-size: 40px;
             }
         }
     }
