--- a/public/css/base.css
+++ b/public/css/base.css
@@ -335,7 +335,7 @@ body {
         line-height: 40px;
         text-align: center;
         position: relative;
-        margin: 0 15px;
+        margin: 0 15px 40px;
         box-shadow: 0 0 0 3px #ededed;
         padding-top: 40px; }
         .s-bill .bd .members label input {
