--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -289,7 +289,7 @@ $width:270px;
                 line-height: 40px;
                 text-align: center;
                 position: relative;
-                margin: 0 15px;
+                margin: 0 15px 40px;
                 box-shadow: 0 0 0 3px #ededed;
                 padding-top: 40px;
                 input{
