--- a/public/css/base.css
+++ b/public/css/base.css
@@ -337,7 +337,8 @@ body {
         position: relative;
         margin: 0 15px 40px;
         box-shadow: 0 0 0 3px #ededed;
-        padding-top: 40px; }
+        padding-top: 40px;
+        background-repeat: no-repeat; }
         .s-bill .bd .members label input {
           display: none; }
         .s-bill .bd .members label .icon {
@@ -356,7 +357,7 @@ body {
           color: #676767;
           font-size: 12px; }
   .s-bill .ft {
-    padding: 10px 10px; }
+    padding: 10px 10px 70px; }
     .s-bill .ft h2 {
       margin: 10px 0;
       position: relative; }
