--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -292,6 +292,7 @@ $width:270px;
                 margin: 0 15px 40px;
                 box-shadow: 0 0 0 3px #ededed;
                 padding-top: 40px;
+                background-repeat: no-repeat;
                 input{
                     display: none;
                 }
@@ -317,7 +318,7 @@ $width:270px;
         }
     }
     .ft{
-        padding: 10px 10px;
+        padding: 10px 10px 70px;
         h2{
             margin: 10px 0 ;
             position: relative;
