--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -10,9 +10,8 @@
   <link rel="stylesheet" type="text/css" href="./css/font.css">
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
   <script src="./lib/angular.min.js"></script>
-  <script src="./lib/angular-touch.js"></script>
   <script src="./lib/angular-route.min.js"></script>
-  <script src="./lib/hammer.js"></script>
+  <script src="./lib/fastclick.js"></script>
   <script src="./lib/angular-gestures.js"></script>
   <script src="./lib/ui-bootstrap-custom-tpls.js"></script>
   <script src="./js/eat.js"></script>
