--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -15,6 +15,7 @@
   <script src="./lib/hammer.js"></script>
   <script src="./lib/angular-gestures.js"></script>
   <script src="./lib/ui-bootstrap-custom-tpls.js"></script>
+  <script src="./lib/fastclick.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
   <script src="./js/filter.js"></script>
