--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -207,10 +207,14 @@ $width:270px;
                 display: block;
                 height: 100%;
                 top: 0;
+                width: 50px;
                 vertical-align: middle;
                 padding: 0 10px;
                 span{
                     vertical-align:  middle;
+                    font-size: 20px;
+                    line-height: 3;
+                    text-align: center;
                 }
             }
             &.deleted{
