--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -310,7 +310,7 @@ $width:270px;
                 .icon{
                     position: absolute;
                     top: 40px;
-                    right: -11px;
+                    right: 0px;
                     font-size: 25px;
                     color: #7d7d7d;
                 }
@@ -325,6 +325,7 @@ $width:270px;
                     color: #676767;
                     font-size: 12px;
                     margin: 10px 0 0 0;
+                    line-height: 1;
                     span{
                         display: block;
                         line-height: 1.5;
@@ -507,6 +508,7 @@ $width:270px;
             border-radius: 20px;
             text-align: center;
             line-height: 30px;
+            color:#000;
         }
         .total{
             display: inline-block;
